fixed line spacing

--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ img {
   width: 700px;
   margin: 40px 30px 40px 10px;
   float: right;
+  line-height: 1.4;
 }
 
 .details-bold {
